--- a/sample.html
+++ b/sample.html
@@ -7,5 +7,17 @@
 </head>
 <body>
   <h2>개인 공부입니다</h2>
+  
 </body>
+<script>
+  let a = 3;
+
+  if(a == 3)
+  {
+    console.log(a);
+  }else
+  {
+      console.log(잘못된,접근,입니다);
+  }
+</script>
 </html>
