--- a/로그인페이지.html
+++ b/로그인페이지.html
@@ -20,6 +20,7 @@
     h1{
       font-family: "Noto Sans KR", sans-serif;
       margin-bottom: 30px;
+      color: pink;
     }
     .wrap{
       text-align: center;
@@ -29,7 +30,7 @@
       background-color: #fff;
       border-radius: 5px;
       margin-top: 200px;
-    }
+    } 
     .idWrap, .pwWrap{
       display: flex;
       justify-content: space-between;
@@ -59,6 +60,10 @@
       margin: 0 auto;
       margin-bottom: 10px;
       font-size: 18px;
+      cursor: pointer;
+    }
+    input[type="submit"]:hover{
+      background-color: skyblue;
     }
     input::placeholder{
       padding-left: 5px;
@@ -80,6 +85,10 @@
       text-decoration: none;
       color: #000;
     }
+    .textWrap span a:hover{
+      text-decoration: underline;
+      color: skyblue;
+    }
   </style>
 </head>
 <body>
@@ -92,13 +101,13 @@
       </div>
       <div class="pwWrap">
         <label for="pw">비밀번호</label>
-        <input type="password" name="pw" id="pw" placeholder="비밀번호를 입력해주세요."required>
+        <input type="password" name="pw" id="pw" placeholder="비밀번호를 입력해주세요."required maxlength="10">
       </div>
       <input type="submit" value="로그인">
       <div class="textWrap">
         <span><a href="#">아이디 찾기</a></span>
         <span><a href="#">비밀번호 찾기</a></span>
-        <span><a href="#">회원가입</a></span>
+        <span><a href="./회원가입페이지.html">회원가입</a></span>
       </div>
     </form>
   </div>
