--- a/회원가입페이지.html
+++ b/회원가입페이지.html
@@ -21,10 +21,10 @@
   }
   .wrap{
     width: 500px;
-    padding-block: 50px;
+    padding-block: 30px;
     margin: 0 auto;
     background-color: #fff;
-    margin-top: 50px;
+    margin-top: 20px;
     border-radius: 5px;
   }
   form{
@@ -39,9 +39,12 @@
     color: pink;
   }
   input{
-    border: 1px solid #c2c2c2;
+    border: 1px solid #c3bdbd;
     border-radius: 5px;
-    margin-bottom: 15px;
+    margin: 5px 0 15px 0;
+  }
+  input:not([type="submit"]):hover{
+    box-shadow: 0 0 5px skyblue;
   }
   input:not([type="radio"]){
     display: block;
@@ -71,7 +74,7 @@
     color: #fff;
     padding: 10px;
     margin: 0 auto;
-    margin-bottom: 10px;
+    margin-block: 25px 10px;
     font-size: 18px;
     cursor: pointer;
   }
@@ -81,6 +84,26 @@
   select{
     padding: 50px;
   }
+  .textWrap span:not(:last-child)::after{
+      display: inline-block;
+      content: '';
+      width: 1px;
+      height: 10px;
+      background-color: #4f4646;
+      margin-inline: 10px;
+    }
+    .textWrap{
+      font-size: 12px;
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    .textWrap span a{
+      color: #000;
+    }
+    .textWrap span a:hover{
+      text-decoration: underline;
+      color: skyblue;
+    }
   .yungSns{
     width: 250px;
     margin: 0 auto;
@@ -161,6 +184,11 @@
 
       <input type="submit" value="회원가입">
     </form>
+    <div class="textWrap">
+      <span><a href="./아이디찾기.html">아이디 찾기</a></span>
+      <span><a href="#">비밀번호 찾기</a></span>
+      <span><a href="./로그인페이지.html">로그인 하기</a></span>
+    </div>
     <div class="yungSns">
       <span><a href="http://www.instagram.com/yungwa___">instagram</a></span>
       <span><a href="yunggwa612@gmail.com">email</a></span>
