--- a/학원/Day11/버튼게임풀이.html
+++ b/학원/Day11/버튼게임풀이.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <script src="./버튼게임풀이.js"></script>
+  <style>
+    #game{
+      width: 300px;
+      height: 300px;
+    }
+  </style>
 </head>
 <body>
   <div id="game"></div>      
