--- a/학원/Day11/wordleGame.html
+++ b/학원/Day11/wordleGame.html
@@ -65,7 +65,7 @@
     <button>제출</button>
   </div>
   <script>
-    let correct = 'button';
+    let correct = 'apple';
     
     document.querySelector("button").addEventListener("click",
       function(){
