--- a/학원/Day11/혼자달력만들기.html
+++ b/학원/Day11/혼자달력만들기.html
@@ -66,7 +66,7 @@
     table += `</table>`;
     document.getElementById("yung").innerHTML = table;
     
-    document.getElementById("yung").style
+    // document.getElementById("yung").style
 
     document.write(nowYung.getTime());
     
